templates/redis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  maintainer: somasekharjamalla@gmail.com
  name: redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
        - name: redis
          image: redis:latest
          ports:
            - containerPort: 6379
