templates/django-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: django-ingress
  namespace: vidhya-api
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - api.vidhya.link  # Replace with your actual domain
    secretName: my-tls-secret  # The name of the secret created above
  rules:
  - host: api.vidhya.link  # Replace with your actual domain
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: web
            port:
              number: 8080
